# wolf3d_lives

./: .gitignore  README.md
src/: CMakeLists.txt  act_stat.h  actor_ai.c  actor_ai.h  actors.c  actors.h  ai_com.c  ai_com.h  anorms.h  areas.c  areas.h  audiowl6.h  automap.c  automap.h  cl_input.c  cl_main.c  client.h  console.c  console.h  doors.c  doors.h  draw.h  fileio.c  fileio.h  fileioo.h  fmopl.c  fmopl.h  fontman.c  fontman.h  game.c  game.h  gl_draw.c  keys.c  keys.h  level.c  level.h  map.c  map.h  math.c  math.h  (+45 more)
src/common/: cmd.c  common.c  common.h  cvar.c  files.c  io_images.c  keys.h  parselib.c
src/libs/jpeglib/: jmorecfg.h
src/r_gl/: r_gl.c  r_gl.h
src/scripts/: scr_models.c  scripts.h
src/win32/: afxres.h  gl_win.c  in_win.c  newwolf.rc  resource.h  sys_info.c  sys_win.c  vid_win.c  win32.h
